--- a/Ex09/app/src/main/res/layout/activity_main.xml
+++ b/Ex09/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,10 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="416dp"
-        android:layout_height="446dp"
+        android:layout_width="406dp"
+        android:layout_height="412dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_launcher_background" />
